fix extra padding on body

--- a/css/style.scss
+++ b/css/style.scss
@@ -45,7 +45,7 @@ html {
 }
 
 body {
-  margin: 1em;
+  margin: 0 1em;
   color: $foreground;
   font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
   font-size: 1.6rem;
